<resources>
    <string name="app_name">StudentAttendanceProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="signin">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="username">Username*</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_optional">Email (optional)</string>
    <string name="sign_in">Sign In</string>
    <string name="or">OR</string>
    <string name="don_t_have_an_account_sign_up">Don’t have an account? Sign Up</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="forgot_password_">Forgot Password</string>
    <string name="please_enter_the_phone_number_855_42_associated_with_your_account">Please enter the phone number +855 ********42 associated with your account.</string>
    <string name="_855">+855</string>
    <string name="next">Next</string>
    <string name="enter_the_otp_sent_to_855_42">Enter the OTP sent to +855 ********42</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="_8">8</string>
    <string name="dont_get_otp_code">Don\'t get OTP Code?</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="at_least_8_characters">At least 8 characters</string>
    <string name="must_less_than_25_characters">Must less than 25 characters</string>
    <string name="contains_special_characters">Contains special characters ( @, $, %, #, *, ...)</string>
    <string name="contains_lower_case_and_upper_case_letters">Contains lower case and upper case letters</string>
    <string name="home">Home</string>
    <string name="attendance">Attendance</string>
    <string name="report">Report</string>
    <string name="profile">Profile</string>
    <string name="todo">TODO</string>
    <string name="welcome_back">Welcome back,</string>
    <string name="monica">Monica</string>
    <string name="today_schedule">Today Schedule</string>
    <string name="a">ថ្នាក់ទី ១០ A</string>
</resources>