<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_grayish_blue"
        tools:context=".fragment.NewPasswordFragment">

        <soup.neumorphism.NeumorphCardView
            android:id="@+id/cdView_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/_855"
            android:elevation="@dimen/dp_2"
            android:focusable="true"
            app:neumorph_shadowColorDark="@color/design_default_color_shadow_dark"
            app:neumorph_shadowColorLight="@color/design_default_color_shadow_light"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:neumorph_backgroundColor="@color/light_grayish_blue"
            app:neumorph_shadowElevation="@dimen/dp_1_5"
            app:neumorph_shapeAppearance="@style/CustomShapeAppearanceRadius5"
            app:neumorph_strokeColor="@color/white"
            app:neumorph_strokeWidth="@dimen/dp_1_5"
            tools:ignore="DuplicateSpeakableTextCheck">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center"
                android:padding="5dp"
                app:srcCompat="@drawable/ic_back" />
        </soup.neumorphism.NeumorphCardView>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/new_password"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/sp_20"
            android:layout_marginTop="@dimen/dp_10"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nstScroll_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/csl_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <soup.neumorphism.NeumorphCardView
                    android:id="@+id/cdView_new_password"
                    android:layout_width="0dp"
                    app:neumorph_shadowColorDark="@color/design_default_color_shadow_dark"
                    app:neumorph_shadowColorLight="@color/design_default_color_shadow_light"
                    android:layout_height="@dimen/input_field_height"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:layout_marginTop="110dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:neumorph_shapeAppearance="@style/CustomShapeAppearance"
                    app:neumorph_strokeColor="@color/white"
                    app:neumorph_strokeWidth="@dimen/dp_1_5">

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/poppins_regular"
                        android:hint="@string/new_password"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:paddingHorizontal="@dimen/dp_16"
                        android:textColor="@color/text_color_black"
                        android:textSize="@dimen/sp_16"
                        tools:ignore="Autofill,TextContrastCheck" />

                    <CheckBox
                        android:id="@+id/check_box_eye_toggle"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="end|center"
                        android:layout_marginEnd="@dimen/dp_16"
                        android:background="@drawable/eye_password_toggle_selector"
                        android:button="@null"
                        android:checked="true"
                        android:src="@drawable/ic_hide"
                        tools:ignore="ContentDescription,TouchTargetSizeCheck" />
                </soup.neumorphism.NeumorphCardView>

                <soup.neumorphism.NeumorphCardView
                    android:id="@+id/cdView_confirm_new_password"
                    android:layout_width="0dp"
                    app:neumorph_shadowColorDark="@color/design_default_color_shadow_dark"
                    app:neumorph_shadowColorLight="@color/design_default_color_shadow_light"
                    android:layout_height="@dimen/input_field_height"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_marginEnd="@dimen/dp_16"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cdView_new_password"
                    app:layout_constraintStart_toStartOf="parent"
                    app:neumorph_shapeAppearance="@style/CustomShapeAppearance"
                    app:neumorph_strokeColor="@color/white"
                    app:neumorph_strokeWidth="@dimen/dp_1_5">

                    <EditText
                        android:id="@+id/et_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/poppins_regular"
                        android:hint="@string/confirm_new_password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:paddingHorizontal="@dimen/dp_16"
                        android:textColor="@color/text_color_black"
                        android:textSize="@dimen/sp_16"
                        tools:ignore="Autofill,TextContrastCheck" />

                    <CheckBox
                        android:id="@+id/check_confirm_box_eye_toggle"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="end|center"
                        android:layout_marginEnd="@dimen/dp_16"
                        android:background="@drawable/eye_password_toggle_selector"
                        android:button="@null"
                        android:checked="true"
                        android:src="@drawable/ic_hide"
                        tools:ignore="ContentDescription,TouchTargetSizeCheck" />
                </soup.neumorphism.NeumorphCardView>

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/gray_dot"
                    android:layout_marginStart="32dp"
                    tools:ignore="ContentDescription"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_message"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_message" />
                <TextView
                    android:id="@+id/tv_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_5"
                    android:layout_marginTop="@dimen/dp_10"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/at_least_8_characters"
                    android:textAlignment="textStart"
                    android:textColor="@color/text_password_rule"
                    android:textSize="@dimen/sp_12"
                    app:layout_constraintStart_toEndOf="@+id/imageView4"
                    app:layout_constraintTop_toBottomOf="@+id/cdView_confirm_new_password" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/gray_dot"
                    android:layout_marginStart="32dp"
                    tools:ignore="ContentDescription"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_message1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_message1" />
                <TextView
                    android:id="@+id/tv_message1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_5"
                    android:layout_marginTop="@dimen/dp_5"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/must_less_than_25_characters"
                    android:textAlignment="textStart"
                    android:textColor="@color/text_password_rule"
                    android:textSize="@dimen/sp_12"
                    app:layout_constraintStart_toEndOf="@+id/imageView5"
                    app:layout_constraintTop_toBottomOf="@+id/imageView4" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/gray_dot"
                    android:layout_marginStart="32dp"
                    tools:ignore="ContentDescription"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_message3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_message3" />
                <TextView
                    android:id="@+id/tv_message2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_5"
                    android:layout_marginTop="@dimen/dp_5"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/contains_lower_case_and_upper_case_letters"
                    android:textAlignment="textStart"
                    android:textColor="@color/text_password_rule"
                    android:textSize="@dimen/sp_12"
                    app:layout_constraintStart_toEndOf="@+id/imageView7"
                    app:layout_constraintTop_toBottomOf="@+id/imageView6" />

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/gray_dot"
                    android:layout_marginStart="32dp"
                    tools:ignore="ContentDescription"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_message2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_message2" />
                <TextView
                    android:id="@+id/tv_message3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_5"
                    android:layout_marginTop="@dimen/dp_5"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/contains_special_characters"
                    android:textAlignment="textStart"
                    android:textColor="@color/text_password_rule"
                    android:textSize="@dimen/sp_12"
                    app:layout_constraintStart_toEndOf="@+id/imageView6"
                    app:layout_constraintTop_toBottomOf="@+id/imageView5" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginHorizontal="@dimen/dp_16"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textSize="@dimen/sp_18"
            android:gravity="center"
            app:cornerRadius="@dimen/dp_16"
            android:layout_marginBottom="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:strokeColor="@color/white"
            app:strokeWidth="@dimen/dp_1_5" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>