<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_grayish_blue"
        tools:context=".fragment.forgotpassword.ForgotPasswordFragment">

        <soup.neumorphism.NeumorphCardView
            android:id="@+id/cdView_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/_855"
            android:elevation="@dimen/dp_2"
            android:focusable="true"
            app:neumorph_shadowColorDark="@color/design_default_color_shadow_dark"
            app:neumorph_shadowColorLight="@color/design_default_color_shadow_light"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:neumorph_backgroundColor="@color/light_grayish_blue"
            app:neumorph_shadowElevation="@dimen/dp_1_5"
            app:neumorph_shapeAppearance="@style/CustomShapeAppearanceRadius5"
            app:neumorph_strokeColor="@color/white"
            app:neumorph_strokeWidth="@dimen/dp_1_5"
            tools:ignore="DuplicateSpeakableTextCheck">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center"
                android:padding="5dp"
                app:srcCompat="@drawable/ic_back" />
        </soup.neumorphism.NeumorphCardView>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nstScroll_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/csl_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/imageView2"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="50dp"
                    app:lottie_fileName="password-security.json"
                    app:lottie_autoPlay="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:lottie_loop="true" />


                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/forgot_password_"
                    android:textColor="@color/text_color_black"
                    android:textSize="@dimen/sp_24"
                    android:layout_marginTop="-20dp"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2"
                    app:layout_constraintEnd_toEndOf="@+id/imageView2"
                    app:layout_constraintStart_toStartOf="@+id/imageView2" />

                <TextView
                    android:id="@+id/tv_message"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="70dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/please_enter_the_phone_number_855_42_associated_with_your_account"
                    android:textAlignment="center"
                    android:textColor="@color/text_color_black"
                    android:textSize="@dimen/sp_14"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <View
                    android:layout_width="0.7dp"
                    android:layout_height="36dp"
                    android:layout_marginStart="12dp"
                    android:background="@color/text_color_black"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_country_code"
                    app:layout_constraintStart_toEndOf="@+id/tv_country_code"
                    app:layout_constraintTop_toTopOf="@+id/tv_country_code" />

                <TextView
                    android:id="@+id/tv_country_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/_855"
                    android:textAlignment="center"
                    android:textColor="@color/text_color_black"
                    android:textSize="@dimen/sp_16"
                    app:layout_constraintBottom_toBottomOf="@id/cdView_phone_number"
                    app:layout_constraintStart_toStartOf="@+id/cdView_phone_number"
                    app:layout_constraintTop_toTopOf="@id/cdView_phone_number" />

                <soup.neumorphism.NeumorphCardView
                    android:id="@+id/cdView_phone_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="46dp"
                    android:layout_marginHorizontal="@dimen/dp_16"
                    app:neumorph_shadowColorDark="@color/design_default_color_shadow_dark"
                    app:neumorph_shadowColorLight="@color/design_default_color_shadow_light"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_message"
                    app:neumorph_shapeAppearance="@style/CustomShapeAppearance"
                    app:neumorph_strokeColor="@color/white"
                    app:neumorph_strokeWidth="@dimen/dp_1_5">

                    <EditText
                        android:id="@+id/et_phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="52dp"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/poppins_regular"
                        android:hint="@string/phone_number"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:paddingHorizontal="@dimen/dp_16"
                        android:paddingStart="82dp"
                        android:textColor="@color/text_color_black"
                        android:textColorHint="#546E7A"
                        android:textSize="@dimen/sp_16"
                        tools:ignore="Autofill,RtlSymmetry,TextFields" />
                </soup.neumorphism.NeumorphCardView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginHorizontal="@dimen/dp_16"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textSize="@dimen/sp_18"
            android:gravity="center"
            app:cornerRadius="@dimen/dp_16"
            android:layout_marginBottom="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:strokeColor="@color/white"
            app:strokeWidth="@dimen/dp_1_5" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>